--- a/Vue源码/4.1-响应式-对象.md
+++ b/Vue源码/4.1-响应式-对象.md
@@ -144,7 +144,7 @@ function observe (value, asRootData) {
 
 `observe`针对需要监测的数据在其`__ob__`上维护一个`Observer`实例（比如对于`vm.data`就有`vm.data.__ob__`），可以看到`Vnode`类型变量、Vue实例、非数组或原生对象等类型的数据均不会被监测。如果对象上已经添加过`Observer`实例则直接返回，否则新建一个`Observer`实例。
 
-而`Observer`是一个类，它的作用正是通过给对象的属性添加`getter`和`setter`来依赖收集和派发更新，`data`的响应式正是通过`Observer`实现的——`new Observer(data)`：
+而`Observer`是一个类，它被创建时与数据相绑定，它通过遍历数据的每一项将其处理为响应式的：
 ```js
 class Observer {
   constructor (value) {
