--- a/Vue源码/4.2-响应式-收集依赖.md
+++ b/Vue源码/4.2-响应式-收集依赖.md
@@ -261,16 +261,16 @@ class Dep {
 }
 ```
 
-以上，`dep`可以看做订阅者，`watcher`看做发布者，`dep`订阅了`watcher`：
-- `dep.subs`中维护了它所订阅的`watcher`（一个响应式数据可能在多个Vue实例上访问，也可能在一个Vue实例的模板、计算属性和watch中使用
-- `wathcer.newDeps`/`watcher.newDepIds`维护了订阅自身的所有`dep`
+以上，`dep`可以看做发布者，`watcher`看做订阅者，`watcher`订阅了`dep`：
+- `dep.subs`中维护了订阅了它的`watcher`（同一个响应式数据可能在多个Vue实例上访问，也可能在一个Vue实例的模板、计算属性和watch中被引用
+- `wathcer.newDeps`/`watcher.newDepIds`维护了`watcher`自身所订阅的所有`dep`（一个Vue实例的模板、计算属性、watch中可能引用了多个响应式数据
 
 一个`wathcer`对应了一个Vue实例。
 
-回到`watcher.get`中，除了通过`value = this.getter.call(vm, vm)`触发了响应式数据的`getter`中`dep`对`wacther`的订阅、`watcher`对`dep`的收集逻辑之外，还有以下步骤：
+回到`watcher.get`中，除了通过`value = this.getter.call(vm, vm)`触发了响应式数据的`getter`中`dep`对`wacther`的收集、`watcher`对`dep`的订阅逻辑之外，还有以下步骤：
 - `watcher.dep`可能为`true`（对于渲染`watcher`不会），需要递归触发`value`的子项
 - 当前Vue实例的响应式数据的依赖收集完成，`popTarget`将`Dep.target`指向前一个`watcher`
 - 最后`watcher.cleanupDeps`清空依赖
 
 ### 总结
-这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在这些响应式数据发生变化触发它们的`setter`时方便通知到对应的订阅者`dep`去做相应的视图更新的逻辑处理，这个过程叫派发更新。
+这一小节对Vue响应式数据的依赖收集过程的一些细节做了分析，收集依赖的目的是在某个响应式数据发生变化时方便由其`dep`（`dep`维护在响应式数据上，`watcher`维护在Vue实例上）通知到对应的订阅者`watcher`去做相应的视图更新的逻辑处理，这个过程叫派发更新。
