--- a/Vue源码/4.3-响应式-派发更新.md
+++ b/Vue源码/4.3-响应式-派发更新.md
@@ -22,14 +22,14 @@ function defineReactive (obj, key, val, customSetter, shallow) {
       // 将新设置的值再次处理为响应式对象
       childOb = !shallow && observe(newVal)
 
-      // 通知dep所订阅的watcher
+      // 通知dep的所有订阅者watcher
       dep.notify()
     }
   })
 }
 ```
 
-这里会比较响应式数据新旧值是否相同，如果相同则不会派发更新；对于被重置后的响应式数据变量，需要再次处理为响应式数据。最后是通过`dep.notify()`通知他所订阅的所有发布者`watcher`，回到`Dep.notify`：
+这里会比较响应式数据新旧值是否相同，如果相同则不会派发更新；对于被重置后的响应式数据，需要再次将其处理为响应式的。最后是发布者`dep.notify()`通知它的所有订阅者`watcher`，回到`Dep.notify`：
 ```js
 class Dep {
   //...
@@ -44,7 +44,7 @@ class Dep {
 }
 ```
 
-`dep.notify`的逻辑就是遍历其`subs`中所维护的`watcher`，调用对应的`update`：
+`dep.notify`的逻辑就是遍历其`subs`中所维护的订阅者`watcher`，调用对应的`update`：
 ```js
 class Watcher {
   // ...
@@ -125,8 +125,8 @@ function flushSchedulerQueue () {
 `flushSchedulerQueue`主要做了以下几件事情：
 ##### 1. 对`queue`队列中的watcher按照其id从小到大排序
 排序的操作是为了确保以下几点：
-- **组件的更新是由父到子的**：因为父组件的创建是先于子的，所以`watcher`的创建也是先父后子，因此需要其对应的回调（`watcher.run`）的执行顺序也保持先父后子。
-- 用户的自定义`watcher`要优先于渲染`watcher`触发——因为用户自定义`watcher`是在渲染`watcher`之前创建的。
+- **组件的更新是由父到子的**：因为父组件实例的创建是先于子的，所以`watcher`的创建也是先父后子，因此需要其对应的回调（`watcher.run`）的执行顺序也保持先父后子。
+- 用户自定义的`watcher`要优先于渲染`watcher`触发——因为用户自定义`watcher`是在渲染`watcher`之前创建的。
 - 如果一个组件在其父组件的`watcher`执行期间被销毁，那么它对应的`watcher`可以被跳过，所以父组件的`watcher`应该先执行。
   
 ##### 2. 遍历queue队列中的watcher，调用watcher.run()
@@ -149,7 +149,7 @@ function queueWatcher (watcher) {
 }
 ```
 
-在这种情况下，`flushing`为`true`，后续的执行逻辑是在`queue`队列（存储的是`watcher`实例）中从后往前（前面已经说过队列中`watcher`按id从小到大排序）找第一个比当前待插入的`watcher`的id小的`watcher`的位置，将当前待插入的`watcher`插入`queue`队列的此位置上。
+在这种情况下，`flushing`为`true`，后续的执行逻辑是在`queue`队列中从后往前（前文已经说过队列中`watcher`是按id从小到大排序）找第一个比当前待插入的`watcher`的id小的`watcher`的位置，将待插入的`watcher`插入`queue`队列的此位置上。
 
 ##### 3. 状态恢复
 这一步用于重置队列及异步更新流程的相关变量：
@@ -189,7 +189,7 @@ class Watcher {
 
 中任一个，则执行`watcher`的回调，注意回调函数执行时的参数`value`和`oldValue`，它们正是我们在添加自定义`watch`在回调函数的参数中拿到的新、旧值。
 
-而在`watcher.get`执行时，`watcher.getter`会得到执行，即：
+前文已经讨论过在`watcher.get`执行时，`watcher.getter`又会得到执行，即：
 ```js
 updateComponent = () => {
   vm._update(vm._render(), hydrating)
@@ -198,15 +198,15 @@ updateComponent = () => {
 
 这就是在修改Vue实例的响应式数据时，会重新触发实例的渲染的原因。
 
-现在仔细回忆一下这个`updateComponent`，它是在挂载实例时创建`watcher`时作为参数传入的，至此我们知道`updateComponent`方法执行的两个场景了：
+现在仔细回忆一下这个`updateComponent`，它是在实例挂载时作为`expOrfn`参数传入创建的渲染`watcher`中的，至此我们知道`updateComponent`方法执行的两个场景了：
 - 一个是初次挂载实例`vm.$mount`时，创建vnode导致实例的响应式数据被访问时
-- 另一个就是本节所讲的实例的响应式数据被修改时，触发了实例的`watcher.run`
+- 另一个就是本节所讲的实例的响应式数据被修改时，响应式数据中的发布者`dep`通知订阅者`watcher`执行`watcher.run`
 
 ### 总结
 在这里分析了Vue的响应式数据派发更新的过程——当数据变化时：
-1. 响应式数据的`set`通知`dep.notify()`
-2. 遍历`dep.subs`的`watcher`执行`watcher.update()`
+1. 响应式数据的`set`中的`dep`发布变化的通知
+2. 遍历`dep.subs`的订阅者`watcher`执行`watcher.update()`
 3. `watcher.run`又触发了`watcher.getter`
 4. `vm._update(vm._render(), hydrating)`
    
-需要`update`操作的`wathcer`被存入`queue`，等待在`nextTick`中被遍历唤起，下一节我们来重点分析`nextTick`的实现。
+需要`update`操作的`wathcer`被存入`queue`，等待在`nextTick`中被遍历唤起，下一节我们会重点分析`nextTick`的实现。
