--- a/Vue源码/4.4-响应式-nextTick.md
+++ b/Vue源码/4.4-响应式-nextTick.md
@@ -2,17 +2,20 @@
 
 在浏览器环境中，一轮事件循环可以理解为一个`tick`，那么`nextTick`相当于下一轮事件循环。在分析Vue的`nextTick`实现之前，我们要先弄明白为什么需要`nextTick`这个东西。
 
-Vue的官方文档中提到过，**Vue在更新DOM时是异步执行的**。我们可以想象这样的场景：
-1. 对某个响应式数据连续修改了多次
-2. 对一个实例下的某几个响应式数据进行了修改
+Vue的官方文档中提到过，**Vue在更新DOM时是异步执行的**。我们可以想象这样的场景，它们都会触发视图的更新
+1. ~~对某个响应式数据连续修改了多次~~
+2. ~~对一个实例下的某几个响应式数据进行了修改~~
+3. 对不同实例下的响应式数据进行修改
 
-很显然在统一等待所有的响应式数据修改完成之后，一次性的进行DOM的更新就可以了。而如果DOM更新是同步的话，每一次响应式数据状态的改变都对应一次DOM更新，更新DOM的操作又涉及了非常多的计算，这疑会造成非常大的性能浪费。
+很显然在统一等待所有的响应式数据修改完成之后，一次性的进行视图就可以了。而如果DOM更新是同步的话，每一次响应式数据状态的改变都对应一次DOM更新，更新DOM的操作又涉及了非常多的计算，这疑会造成非常大的性能浪费。
 
-因此一旦侦听到数据变化，Vue的做法是开启一个队列，将需要在同一轮事件循环中触发视图更新的`wathcer`存储进去，在下一轮事件循环中去执行它们的更新操作。
+前文已经讨论过，`queueWatcher`在将`watcher`推入队列前通过`watcher.id`做了唯一性校验已经可以避免前两种场景导致的过渡渲染。
 
-这就是Vue要实现`nextTick`的原因。
+而对于第三种情况，仅仅是`wacther`的唯一性校验还是不能解决过渡渲染。Vue的做法是开启一个队列，将需要在同一轮事件循环中触发视图更新的`wathcer`存储进去，在下一轮事件循环中去执行它们的更新操作。
 
-进入正题，`next-tick`中维护了`microTimerFunc`和`macroTimerFunc`两个方法，它们对应的分别是以`microTask`方式和`macroTask`方式处理`flushCallbacks`：
+这就是Vue要实现`nextTick`方法的原因。
+
+进入正题，`next-tick`中维护了`timerFunc`方法（Vue2.6.10版本）：
 ```js
 // next-tick.js
 const callbacks = []
@@ -27,46 +30,41 @@ function flushCallbacks () {
   }
 }
 
-let microTimerFunc
-let macroTimerFunc
-let useMacroTask = false
-
-// macroTimerFunc
-if (typeof setImmediate !== 'undefined' && isNative(setImmediate)) {
-  macroTimerFunc = () => {
-    setImmediate(flushCallbacks)
-  }
-} else if (typeof MessageChannel !== 'undefined' && (
-  isNative(MessageChannel) ||
-  MessageChannel.toString() === '[object MessageChannelConstructor]')) {
-  const channel = new MessageChannel()
-  const port = channel.port2
-  channel.port1.onmessage = flushCallbacks
-  macroTimerFunc = () => {
-    port.postMessage(1)
-  }
-} else {
-  macroTimerFunc = () => {
-    setTimeout(flushCallbacks, 0)
-  }
-}
-// microTimerFunc
 if (typeof Promise !== 'undefined' && isNative(Promise)) {
   const p = Promise.resolve()
-  microTimerFunc = () => {
+  timerFunc = () => {
     p.then(flushCallbacks)
     if (isIOS) setTimeout(noop)
   }
+} else if (!isIE && typeof MutationObserver !== 'undefined' && (
+  isNative(MutationObserver) ||
+  MutationObserver.toString() === '[object MutationObserverConstructor]'
+)) {
+  let counter = 1
+  const observer = new MutationObserver(flushCallbacks)
+  const textNode = document.createTextNode(String(counter))
+  observer.observe(textNode, {
+    characterData: true
+  })
+  timerFunc = () => {
+    counter = (counter + 1) % 2
+    textNode.data = String(counter)
+  }
+} else if (typeof setImmediate !== 'undefined' && isNative(setImmediate)) {
+  timerFunc = () => {
+    setImmediate(flushCallbacks)
+  }
 } else {
-  microTimerFunc = macroTimerFunc
+  timerFunc = () => {
+    setTimeout(flushCallbacks, 0)
+  }
+}
 }
 ```
 
-其中，`macroTask`的实现是按照`setImmediate > MessageChannel > setTimeout 0`三个方案的优先级降序检测采用的；而`microTask`则是先检测浏览器是否原生支持`Promise`，不支持则采纳`macro task`的方案。
+`timerFunc`的实现是按照`Promise.then > MutationObserver -> setImmediate > setTimeout 0`四个方案的优先级降序采用的，而`flushCallbacks`做的事情就是遍历`callbacks`数组内保存的回调依次执行它们。
 
-而`flushCallbacks`做的事情就是遍历依次执行`callbacks`数组内保存的回调。
-
-紧接着来看`nextTick`：
+紧接着来看关键的`nextTick`：
 ```js
 function nextTick (cb, ctx) {
   let _resolve
@@ -77,32 +75,22 @@ function nextTick (cb, ctx) {
       _resolve(ctx)
     }
   })
+
+  // 当前是否在执行回调
   if (!pending) {
     pending = true
-    if (useMacroTask) {
-      macroTimerFunc()
-    } else {
-      microTimerFunc()
-    }
+    timerFunc()
+  }
+
+  if (!cb && typeof Promise !== 'undefined') {
+    return new Promise(resolve => {
+      _resolve = resolve
+    })
   }
 }
 ```
 
-`nextTick`方法将需要执行的回调`cb`做了一层封装后压入`callbacks`数组，最后根据`useMacroTask`决定通过`macroTimerFunc`还是`microTimerFunc`去`flushCallbacks`，这就保证了`nextTick`所接收的回调会在下一轮事件循环中执行。
-
-此外，`next-tick`还定义了`withMacroTask`方法，不像`nextTick`挂载在Vue的静态属性上那样可以供Vue用户使用，这是一个Vue框架内部使用的方法：
-```js
-function withMacroTask (fn) {
-  return fn._withTask || (fn._withTask = function () {
-    useMacroTask = true
-    const res = fn.apply(null, arguments)
-    useMacroTask = false
-    return res
-  })
-}
-```
-
-它对函数进行了封装，确保函数执行的过程中对数据进行修改触发的异步回调时通过`macroTimerFunc`执行的，一些DOM交互事件如`v-on`绑定事件回调函数的处理需要走`macroTask`。
+`nextTick`方法将需要执行的回调`cb`做了一层封装后压入`callbacks`数组，当前无回调任务在执行则通过`timerFunc`清空`callbacks`任务队列，而`timerFun`优先以`microTask`的方式触发。
 
 ### 总结
-至此，我们知道了在Vue中响应式数据的修改到视图的更新是一个异步的过程，分析了`nextTick`的实现，加深了对浏览器的事件循环机制的认识。
+至此，我们知道了在Vue中响应式数据的修改到视图的更新是一个异步的过程，分析了`nextTick`方法的实现，加深了对浏览器的事件循环机制的认识。
